include/artex.h

/* ========================================================================
 * Opaque handles
 * ======================================================================== */

typedef struct rx_engine rx_engine_t;   /* execution engine (state + EVM) */
typedef struct rx_state  rx_state_t;    /* state handle (for queries) */
/* ========================================================================
 * Fixed-size types (plain bytes, no internal deps)
 * ======================================================================== */

typedef struct { uint8_t bytes[20]; } rx_address_t;
typedef struct { uint8_t bytes[32]; } rx_hash_t;
typedef struct { uint8_t bytes[32]; } rx_uint256_t;
/* ========================================================================
 * Error codes
 * ======================================================================== */

typedef enum {
    RX_OK = 0,                /* no error */
    RX_ERR_NULL_ARG,          /* required argument was NULL */
    RX_ERR_INVALID_CONFIG,    /* bad chain_id or config */
    RX_ERR_OUT_OF_MEMORY,     /* allocation failed */
    RX_ERR_ALREADY_INIT,      /* genesis/state already loaded */
    RX_ERR_NOT_INIT,          /* engine not initialized (no genesis/state loaded) */
    RX_ERR_FILE_IO,           /* file open/read/write failed */
    RX_ERR_PARSE,             /* JSON or RLP parse error */
    RX_ERR_DECODE,            /* block header/body decode failed */
    RX_ERR_EXECUTION,         /* block execution internal error */
    RX_ERR_BLOCK_NOT_FOUND,   /* block number outside hash window */
} rx_error_t;
/** Return human-readable string for an error code. */
RX_API const char *rx_error_string(rx_error_t err);
/** Get last error from engine. Thread-safe (per-engine). */
RX_API rx_error_t rx_engine_last_error(const rx_engine_t *engine);
/** Get last error message (may contain details). Returns "" if no error. */
RX_API const char *rx_engine_last_error_msg(const rx_engine_t *engine);
/* ========================================================================
 * Configuration
 * ======================================================================== */

typedef enum {
    RX_CHAIN_MAINNET = 1,
} rx_chain_id_t;
typedef struct {
    rx_chain_id_t chain_id;    /* only RX_CHAIN_MAINNET supported */
    const char   *data_dir;    /* directory for code_store and other disk state.
                                  NULL = in-memory only (no persistence). */
} rx_config_t;
typedef struct {
    uint8_t      status;         /* 0 = fail, 1 = success */
    uint8_t      tx_type;        /* 0=legacy, 1=2930, 2=1559, 3=4844 */
    uint64_t     gas_used;       /* gas consumed by this tx */
    uint64_t     cumulative_gas; /* cumulative gas after this tx */
    uint8_t      logs_bloom[256];
    rx_log_t    *logs;           /* log entries */
    size_t       log_count;
    bool         contract_created;
    rx_address_t contract_addr;  /* valid if contract_created */
} rx_receipt_t;
/* ========================================================================
 * Block execution result
 * ======================================================================== */

typedef struct {
    bool        ok;              /* true if execution succeeded */
    uint64_t    gas_used;        /* total gas consumed */
    size_t      tx_count;        /* transactions executed */
    rx_hash_t   state_root;      /* post-execution state root */
    rx_hash_t   receipt_root;    /* receipt trie root */
    uint8_t     logs_bloom[256]; /* aggregate bloom filter */
    rx_receipt_t *receipts;      /* per-tx receipts (tx_count entries) */
} rx_block_result_t;
/** Free receipt data inside a block result. */
RX_API void rx_block_result_free(rx_block_result_t *result);
/* ========================================================================
 * Block header / body (for rx_execute_block)
 * ======================================================================== */

typedef struct {
    rx_hash_t    parent_hash;
    rx_hash_t    uncle_hash;
    rx_address_t coinbase;
    rx_hash_t    state_root;
    rx_hash_t    tx_root;
    rx_hash_t    receipt_root;
    uint8_t      logs_bloom[256];
    rx_uint256_t difficulty;
    uint64_t     number;
    uint64_t     gas_limit;
    uint64_t     gas_used;
    uint64_t     timestamp;
    uint8_t      extra_data[32];
    size_t       extra_data_len;
    rx_hash_t    mix_hash;          /* prev_randao post-merge */
    uint64_t     nonce;

    /* EIP-1559 (London+) */
    bool         has_base_fee;
    rx_uint256_t base_fee;

    /* Shanghai+ */
    bool         has_withdrawals_root;
    rx_hash_t    withdrawals_root;

    /* Cancun+ */
    bool         has_blob_gas;
    uint64_t     blob_gas_used;
    uint64_t     excess_blob_gas;
    bool         has_parent_beacon_root;
    rx_hash_t    parent_beacon_root;

    /* Prague+ (EIP-7685) */
    bool         has_requests_hash;
    rx_hash_t    requests_hash;
} rx_block_header_t;
typedef struct {
    /** Raw transaction bytes. Each entry is a single transaction:
     *  - Legacy: RLP-encoded transaction list
     *  - Typed (EIP-2718): type_byte || RLP_payload */
    const uint8_t **transactions;   /* array of tx byte pointers */
    size_t         *tx_lengths;     /* length of each tx */
    size_t          tx_count;

    /** EIP-4895 withdrawals (Shanghai+). NULL if none. */
    rx_withdrawal_t *withdrawals;
    size_t           withdrawal_count;
} rx_block_body_t;
/* ========================================================================
 * Engine lifecycle
 * ======================================================================== */

/** Create execution engine. Returns NULL on failure (check rx_engine_last_error). */
RX_API rx_engine_t *rx_engine_create(const rx_config_t *config);
/** Destroy engine and free all resources. */
RX_API void rx_engine_destroy(rx_engine_t *engine);
/** Load genesis state from JSON file. Call before first block. */
RX_API bool rx_engine_load_genesis(rx_engine_t *engine, const char *path,
                                   const rx_hash_t *genesis_hash);
/**
 * Load state from a binary snapshot. Call instead of load_genesis.
 * Also loads block hash ring from a separate .hashes file if present.
 */
RX_API bool rx_engine_load_state(rx_engine_t *engine, const char *path);
/**
 * Save current state to a binary snapshot.
 * Also saves block hash ring to a separate .hashes file (256*32 bytes).
 */
RX_API bool rx_engine_save_state(rx_engine_t *engine, const char *path);
/* ========================================================================
 * Block execution
 * ======================================================================== */

/**
 * Execute a block from RLP-encoded header + body.
 *
 * Decodes the RLP, executes all transactions, applies rewards
 * and withdrawals, finalizes state. The state root in the result
 * is computed automatically.
 *
 * block_hash: keccak256 of the RLP-encoded header. Used for the
 *             BLOCKHASH opcode ring buffer.
 *
 * Returns false only on fatal/internal error (OOM, corrupt data).
 * Check result->ok for execution success.
 */
RX_API bool rx_execute_block_rlp(rx_engine_t *engine,
                                 const uint8_t *header_rlp, size_t header_len,
                                 const uint8_t *body_rlp, size_t body_len,
                                 const rx_hash_t *block_hash,
                                 bool compute_root,
                                 rx_block_result_t *result);
/**
 * Execute a block from decoded header + body structs.
 *
 * Same as rx_execute_block_rlp but skips RLP decode — use when the
 * caller already has parsed block data (e.g. from their own p2p layer).
 *
 * block_hash: keccak256 of the RLP-encoded header. Used for the
 *             BLOCKHASH opcode ring buffer.
 *
 * compute_root: if true, compute state root after execution
 *               (result->state_root is valid). If false, skip root
 *               computation for speed (result->state_root is zero).
 *               Use rx_compute_state_root at checkpoint boundaries.
 */
RX_API bool rx_execute_block(rx_engine_t *engine,
                             const rx_block_header_t *header,
                             const rx_block_body_t *body,
                             const rx_hash_t *block_hash,
                             bool compute_root,
                             rx_block_result_t *result);
/**
 * Compute state root without executing a block.
 *
 * Use when you need the root outside of block execution,
 * e.g. for validation at checkpoint boundaries.
 */
RX_API rx_hash_t rx_compute_state_root(rx_engine_t *engine);
/* ========================================================================
 * State queries
 * ======================================================================== */

/**
 * Get state handle for queries.
 *
 * State queries are only valid between block executions — after
 * rx_execute_block_rlp returns and before the next call. The state
 * reflects the finalized result of the last executed block.
 * Do not query state while a block is executing.
 */
RX_API rx_state_t *rx_engine_get_state(rx_engine_t *engine);
/** Check if account exists in state. */
RX_API bool rx_account_exists(rx_state_t *state, const rx_address_t *addr);
/** Get account nonce. Returns 0 for non-existent accounts. */
RX_API uint64_t rx_get_nonce(rx_state_t *state, const rx_address_t *addr);
/** Get account balance (32 bytes, big-endian). */
RX_API rx_uint256_t rx_get_balance(rx_state_t *state, const rx_address_t *addr);
/** Get code hash. Returns empty hash for EOAs. */
RX_API rx_hash_t rx_get_code_hash(rx_state_t *state, const rx_address_t *addr);
/** Get code size in bytes. Returns 0 for EOAs. */
RX_API uint32_t rx_get_code_size(rx_state_t *state, const rx_address_t *addr);
/** Get storage value at key. Returns zero for unset slots. */
RX_API rx_uint256_t rx_get_storage(rx_state_t *state, const rx_address_t *addr,
                                   const rx_uint256_t *key);
/**
 * Set a block hash in the 256-entry ring buffer.
 *
 * Normally not needed — rx_engine_load_state loads hashes from the
 * .hashes file automatically. Use this only when the .hashes file
 * is missing (e.g. snapshot from external tools) or to override entries.
 */
RX_API void rx_set_block_hash(rx_engine_t *engine, uint64_t block_number,
                              const rx_hash_t *hash);
/* ========================================================================
 * Status
 * ======================================================================== */

/** Get last executed block number. Returns 0 before first block. */
RX_API uint64_t rx_get_block_number(const rx_engine_t *engine);
/* ========================================================================
 * Version
 * ======================================================================== */

/** Returns version string, e.g. "0.1.0". */
RX_API const char *rx_version(void);
/* ========================================================================
 * Block commit / revert (chain tip reorg)
 * ======================================================================== */

/**
 * Commit the last executed block — discard undo data.
 *
 * Must be called after rx_execute_block_rlp when the block is accepted.
 * Without this, the undo log accumulates and the next block execution
 * may produce incorrect undo entries.
 */
RX_API bool rx_commit_block(rx_engine_t *engine);
/**
 * Revert the last executed block — restore pre-block state.
 *
 * Walks the undo log (captured on first-touch during execution) and
 * restores account nonce/balance/flags and storage slots to their
 * pre-block values. Also rolls back the block number and hash ring.
 *
 * Depth=1 only (last block). For deeper reorgs, reload a snapshot
 * with rx_engine_load_state and re-execute the new fork's blocks.
 */
RX_API bool rx_revert_block(rx_engine_t *engine);