examples/python/artex.py

"""
artex.py — high-level Python wrapper around libartex.

The artex library exposes a stable C API (rx_* functions). This module
wraps it in a Pythonic Engine class with context-manager support,
exceptions instead of bool returns, and int/bytes types instead of
ctypes structs on the public surface.

Low-level ctypes structs are still exported (RxHash, RxAddress, etc.)
for advanced users who need to drop down to the raw API.

Typical usage:

    from artex import Engine, Config

    with Engine(Config(chain_id=1, data_dir="./state")) as engine:
        engine.load_state("state_24864361.bin")
        print("block:", engine.block_number())
        print("root:", engine.state_root().hex())

        # execute a block (raw RLP)
        result = engine.execute_block_rlp(header_rlp, body_rlp, block_hash)
        print("tx count:", result.tx_count, "gas:", result.gas_used)
        engine.commit_block()
"""

from __future__ import annotations

import ctypes
import ctypes.util
import os
from dataclasses import dataclass
from pathlib import Path


# =============================================================================
# Locate libartex
# =============================================================================

def _find_libartex() -> str:
    """Try common locations for libartex.so. Override with ARTEX_LIB env var."""
    env = os.environ.get("ARTEX_LIB")
    if env and os.path.isfile(env):
        return env

    here = Path(__file__).resolve().parent
    # examples/python/ → repo root → build/libartex.so
    candidates = [
        here.parent.parent / "build" / "libartex.so",
        here.parent.parent / "build" / "libartex.so.0",
        Path("/usr/local/lib/libartex.so"),
    ]
    for p in candidates:
        if p.is_file():
            return str(p)

    so = ctypes.util.find_library("artex")
    if so:
        return so

    raise RuntimeError(
        "libartex.so not found — set ARTEX_LIB env var or build in ./build"
    )


# =============================================================================
# Low-level ctypes structs (mirror include/artex.h)
# =============================================================================

class RxHash(ctypes.Structure):
    _fields_ = [("bytes", ctypes.c_uint8 * 32)]

class RxAddress(ctypes.Structure):
    _fields_ = [("bytes", ctypes.c_uint8 * 20)]

class RxUint256(ctypes.Structure):
    _fields_ = [("bytes", ctypes.c_uint8 * 32)]

class RxConfig(ctypes.Structure):
    _fields_ = [
        ("chain_id", ctypes.c_int),
        ("data_dir", ctypes.c_char_p),
    ]

class RxReceipt(ctypes.Structure):
    _fields_ = [
        ("status", ctypes.c_uint8),
        ("tx_type", ctypes.c_uint8),
        ("gas_used", ctypes.c_uint64),
        ("cumulative_gas", ctypes.c_uint64),
        ("logs_bloom", ctypes.c_uint8 * 256),
        ("logs", ctypes.c_void_p),
        ("log_count", ctypes.c_size_t),
        ("contract_created", ctypes.c_bool),
        ("contract_addr", RxAddress),
    ]

class RxBlockResult(ctypes.Structure):
    _fields_ = [
        ("ok", ctypes.c_bool),
        ("gas_used", ctypes.c_uint64),
        ("tx_count", ctypes.c_size_t),
        ("state_root", RxHash),
        ("receipt_root", RxHash),
        ("logs_bloom", ctypes.c_uint8 * 256),
        ("receipts", ctypes.POINTER(RxReceipt)),
    ]


class RxBlockHeader(ctypes.Structure):
    _fields_ = [
        ("parent_hash", RxHash),
        ("uncle_hash", RxHash),
        ("coinbase", RxAddress),
        ("state_root", RxHash),
        ("tx_root", RxHash),
        ("receipt_root", RxHash),
        ("logs_bloom", ctypes.c_uint8 * 256),
        ("difficulty", RxUint256),
        ("number", ctypes.c_uint64),
        ("gas_limit", ctypes.c_uint64),
        ("gas_used", ctypes.c_uint64),
        ("timestamp", ctypes.c_uint64),
        ("extra_data", ctypes.c_uint8 * 32),
        ("extra_data_len", ctypes.c_size_t),
        ("mix_hash", RxHash),
        ("nonce", ctypes.c_uint64),
        ("has_base_fee", ctypes.c_bool),
        ("base_fee", RxUint256),
        ("has_withdrawals_root", ctypes.c_bool),
        ("withdrawals_root", RxHash),
        ("has_blob_gas", ctypes.c_bool),
        ("blob_gas_used", ctypes.c_uint64),
        ("excess_blob_gas", ctypes.c_uint64),
        ("has_parent_beacon_root", ctypes.c_bool),
        ("parent_beacon_root", RxHash),
        ("has_requests_hash", ctypes.c_bool),
        ("requests_hash", RxHash),
    ]


class RxWithdrawal(ctypes.Structure):
    _fields_ = [
        ("index", ctypes.c_uint64),
        ("validator_index", ctypes.c_uint64),
        ("address", RxAddress),
        ("amount_gwei", ctypes.c_uint64),
    ]


class RxBlockBody(ctypes.Structure):
    _fields_ = [
        ("transactions", ctypes.POINTER(ctypes.POINTER(ctypes.c_uint8))),
        ("tx_lengths", ctypes.POINTER(ctypes.c_size_t)),
        ("tx_count", ctypes.c_size_t),
        ("withdrawals", ctypes.POINTER(RxWithdrawal)),
        ("withdrawal_count", ctypes.c_size_t),
    ]


# =============================================================================
# Error handling
# =============================================================================

# rx_error_t enum
class RxError:
    OK = 0
    NULL_ARG = 1
    INVALID_CONFIG = 2
    OUT_OF_MEMORY = 3
    ALREADY_INIT = 4
    NOT_INIT = 5
    FILE_IO = 6
    PARSE = 7
    DECODE = 8
    EXECUTION = 9
    BLOCK_NOT_FOUND = 10


class ArtexError(Exception):
    """Raised when an rx_* call fails. Contains code + message from engine."""

    def __init__(self, code: int, message: str):
        self.code = code
        self.message = message
        super().__init__(f"[code={code}] {message}")


# =============================================================================
# Load + bind library symbols
# =============================================================================

_LIB: ctypes.CDLL | None = None


def _lib() -> ctypes.CDLL:
    global _LIB
    if _LIB is not None:
        return _LIB
    lib = ctypes.CDLL(_find_libartex())

    lib.rx_version.restype = ctypes.c_char_p
    lib.rx_version.argtypes = []

    lib.rx_error_string.restype = ctypes.c_char_p
    lib.rx_error_string.argtypes = [ctypes.c_int]

    lib.rx_engine_create.restype = ctypes.c_void_p
    lib.rx_engine_create.argtypes = [ctypes.POINTER(RxConfig)]

    lib.rx_engine_destroy.restype = None
    lib.rx_engine_destroy.argtypes = [ctypes.c_void_p]

    lib.rx_engine_last_error.restype = ctypes.c_int
    lib.rx_engine_last_error.argtypes = [ctypes.c_void_p]

    lib.rx_engine_last_error_msg.restype = ctypes.c_char_p
    lib.rx_engine_last_error_msg.argtypes = [ctypes.c_void_p]

    lib.rx_engine_load_genesis.restype = ctypes.c_bool
    lib.rx_engine_load_genesis.argtypes = [
        ctypes.c_void_p, ctypes.c_char_p, ctypes.POINTER(RxHash)]

    lib.rx_engine_load_state.restype = ctypes.c_bool
    lib.rx_engine_load_state.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

    lib.rx_engine_save_state.restype = ctypes.c_bool
    lib.rx_engine_save_state.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

    lib.rx_execute_block_rlp.restype = ctypes.c_bool
    lib.rx_execute_block_rlp.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t,
        ctypes.POINTER(RxHash),
        ctypes.c_bool,
        ctypes.POINTER(RxBlockResult),
    ]

    lib.rx_execute_block.restype = ctypes.c_bool
    lib.rx_execute_block.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(RxBlockHeader),
        ctypes.POINTER(RxBlockBody),
        ctypes.POINTER(RxHash),
        ctypes.c_bool,
        ctypes.POINTER(RxBlockResult),
    ]

    lib.rx_commit_block.restype = ctypes.c_bool
    lib.rx_commit_block.argtypes = [ctypes.c_void_p]

    lib.rx_revert_block.restype = ctypes.c_bool
    lib.rx_revert_block.argtypes = [ctypes.c_void_p]

    lib.rx_block_result_free.restype = None
    lib.rx_block_result_free.argtypes = [ctypes.POINTER(RxBlockResult)]

    lib.rx_compute_state_root.restype = RxHash
    lib.rx_compute_state_root.argtypes = [ctypes.c_void_p]

    lib.rx_get_block_number.restype = ctypes.c_uint64
    lib.rx_get_block_number.argtypes = [ctypes.c_void_p]

    lib.rx_set_block_hash.restype = None
    lib.rx_set_block_hash.argtypes = [
        ctypes.c_void_p, ctypes.c_uint64, ctypes.POINTER(RxHash)]

    lib.rx_engine_get_state.restype = ctypes.c_void_p
    lib.rx_engine_get_state.argtypes = [ctypes.c_void_p]

    lib.rx_account_exists.restype = ctypes.c_bool
    lib.rx_account_exists.argtypes = [ctypes.c_void_p, ctypes.POINTER(RxAddress)]

    lib.rx_get_nonce.restype = ctypes.c_uint64
    lib.rx_get_nonce.argtypes = [ctypes.c_void_p, ctypes.POINTER(RxAddress)]

    lib.rx_get_balance.restype = RxUint256
    lib.rx_get_balance.argtypes = [ctypes.c_void_p, ctypes.POINTER(RxAddress)]

    lib.rx_get_code_hash.restype = RxHash
    lib.rx_get_code_hash.argtypes = [ctypes.c_void_p, ctypes.POINTER(RxAddress)]

    lib.rx_get_code_size.restype = ctypes.c_uint32
    lib.rx_get_code_size.argtypes = [ctypes.c_void_p, ctypes.POINTER(RxAddress)]

    lib.rx_get_storage.restype = RxUint256
    lib.rx_get_storage.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(RxAddress),
        ctypes.POINTER(RxUint256),
    ]

    _LIB = lib
    return lib


# =============================================================================
# Pythonic helpers
# =============================================================================

def _addr(a: bytes | str) -> RxAddress:
    if isinstance(a, str):
        s = a[2:] if a.startswith(("0x", "0X")) else a
        a = bytes.fromhex(s)
    if len(a) != 20:
        raise ValueError(f"address must be 20 bytes, got {len(a)}")
    r = RxAddress()
    ctypes.memmove(r.bytes, a, 20)
    return r


def _u256(v: bytes | int) -> RxUint256:
    if isinstance(v, int):
        if v < 0 or v >= (1 << 256):
            raise ValueError("uint256 out of range")
        v = v.to_bytes(32, "big")
    if len(v) != 32:
        raise ValueError(f"uint256 must be 32 bytes, got {len(v)}")
    r = RxUint256()
    ctypes.memmove(r.bytes, v, 32)
    return r


def _u256_to_int(u: RxUint256) -> int:
    return int.from_bytes(bytes(u.bytes), "big")


# =============================================================================
# High-level wrappers
# =============================================================================

@dataclass
class Config:
    """Engine configuration. Only mainnet supported today."""
    chain_id: int = 1           # RX_CHAIN_MAINNET
    data_dir: str | None = None  # None = in-memory only

    def _to_rx(self) -> RxConfig:
        c = RxConfig()
        c.chain_id = self.chain_id
        c.data_dir = self.data_dir.encode() if self.data_dir else None
        return c


@dataclass
class BlockResult:
    """Pythonic view of an rx_block_result_t (receipts not exposed here)."""
    ok: bool
    gas_used: int
    tx_count: int
    state_root: bytes   # 32 bytes; zeroed if compute_root=False
    receipt_root: bytes # 32 bytes
    logs_bloom: bytes   # 256 bytes

    @classmethod
    def _from_rx(cls, r: RxBlockResult) -> "BlockResult":
        return cls(
            ok=r.ok,
            gas_used=r.gas_used,
            tx_count=r.tx_count,
            state_root=bytes(r.state_root.bytes),
            receipt_root=bytes(r.receipt_root.bytes),
            logs_bloom=bytes(r.logs_bloom),
        )


class Engine:
    """High-level wrapper around rx_engine_t. Use as a context manager
    to guarantee cleanup, or call close() explicitly."""
